[package]
name = "imgui-rust"
version = "0.1.0"
authors = ["JasonWang <1103870790@qq.com>"]
edition = "2018"

[lib]
name = "imgui_rust"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[target.'cfg(all(target_arch = "wasm32"))'.dependencies]
stdweb = "0.4.10"
stdweb-derive = "0.5.1"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]



