[package]
name = "imgui-rust"
version = "0.1.0"
authors = ["JasonWang <1103870790@qq.com>"]
edition = "2018"

[lib]
name = "imgui_rust"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.9"
imgui-sys = "0.0.21"

[target.wasm32-unknown-unknown.dependencies]
stdweb = { version = "0.4.10", optional = true }
wasm-bindgen = { version = "0.2.12", optional = true }




