[package]
name = "helloworld"
version = "0.1.0"
authors = ["JasonWang <1103870790@qq.com>"]
edition = "2018"

[dependencies]
imgui-rust = { path = "../../", features=["stdweb"]}
glfw = "0.25.0"
gl = "0.11.0"
serde = "1.0.0"
serde_derive = "1.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
